--- a/NASAPictures/app/src/main/res/values/strings.xml
+++ b/NASAPictures/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NASA Pictures</string>
+    <string name="parsing_error_msg">Error in parsing file</string>
+    <string name="no_pics_found_msg">No pictures found</string>
 </resources>
