integrated data with fragment

--- a/NASAPictures/app/src/main/res/values/strings.xml
+++ b/NASAPictures/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NASA Pictures</string>
     <string name="parsing_error_msg">Error in parsing file</string>
     <string name="no_pics_found_msg">No pictures found</string>
+    <string name="image_fetch_error_msg">Error occurred while fetching images!</string>
 </resources>
